fix: Nav icon visibility and depency updates

--- a/vite-project/src/Components/Navbar/Navbar.css
+++ b/vite-project/src/Components/Navbar/Navbar.css
@@ -28,7 +28,7 @@ nav ul li{
     background: #212EA0;
     transition: 0.5s;
 }
-menu-icon{
+.menu-icon{
     display: none;
 }
 
